feat(landing page): add CSS styling for landing page

--- a/index.html
+++ b/index.html
@@ -11,36 +11,34 @@
     <section>
         <div class="circle"></div>
         <header>
-            <a href="#"><img src="./images/logo.png" class="logo"></a>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About ME</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Socials</a></li>
-                <li><a href="#">Credits</a></li>
+            <button class="button" data-text="Awesome">
+                <span class="actual-text">&nbsp;Andrei&nbsp;</span>
+                <span aria-hidden="true" class="hover-text">&nbsp;Andrei &nbsp;</span>
+            </button>
+            <ul class="nav-buttons">
+                <li><button>About Me</button></li>
+                <li><button>Projects</button></li>
+                <li><button>Socials</button></li>
+                <li><button>Credits</button></li>
             </ul>
         </header>
         <div class="container">
             <div class="text-box">
-                <h2> Lorem ipsum dolor sit <br>Its  <span>Lorem ipsum dolor sit </span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor modi consequatur nulla, fugit odit rerum quaerat illo at! Nihil velit tempore debitis. Doloribus quasi perspiciatis fuga nulla aspernatur necessitatibus adipisci.</p>
-                <a href="#">learn More</a>
+                <h2> Kyle Rianne Andrei D. Dionio  <span> an ITCS Student at FEU Tech </span></h2>
+                <p></p>
+                
             </div>
             <div class="img-box">
-                <img src="./images/img1.png" class="starbucks" alt="">
+                <img src="./assets/img/FormalImage.JPG" class="starbucks" alt="">
             </div>
         </div>
-        <ul class="thumb">
-            <li><img src="./images/thumb1.png" onclick="imgSlider('images/img1.png');changeCircleColor('#017143')"></li>
-            <li><img src="./images/thumb2.png" onclick="imgSlider('images/img2.png');changeCircleColor('#0eb7495')"></li>
-            <li><img src="./images/thumb3.png" onclick="imgSlider('images/img3.png');changeCircleColor('#d752b1')"></li>
-        </ul>
-        <ul class="social">
-            <li><a href="#"><img src="./images/facebook.png"></a></li>
-            <li><a href="#"><img src="./images/instagram.png"></a></li>
-            <li><a href="#"><img src="./images/twitter.png"></a></li>
-        </ul>
     </section>
-	<script src="./assets/js/script.js"></script>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 IT0043L FINAL PROJECT IN WEB DESIGN.</p>
+            <!-- Add additional footer content as needed -->
+        </div>
+    </footer>
 </body>
 </html>
