feat(about me): add design for About Me page structure and styling

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <span aria-hidden="true" class="hover-text">&nbsp;Andrei &nbsp;</span>
             </button>
             <ul class="nav-buttons">
-                <li><button>About Me</button></li>
-                <li><button>Projects</button></li>
-                <li><button>Socials</button></li>
-                <li><button>Credits</button></li>
+                <li><a href="./pages/aboutMe/index.html"><button>About Me</button></a></li>
+                <li><a href="./pages/projects/index.html"><button>Projects</button></a></li>
+                <li><a href="./pages/socials/index.html"><button>Socials</button></a></li>
+                <li><a href="./pages/credits/index.html"><button>Credits</button></a></li>
             </ul>
         </header>
         <div class="container">
@@ -36,7 +36,6 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2024 IT0043L FINAL PROJECT IN WEB DESIGN.</p>
-           
         </div>
     </footer>
 </body>
