feat(my projects): implement my projects page with structure and styling

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Personal Website</title>
+    <title>Homepage</title>
 </head>
 <body>
     <section>
         <div class="circle"></div>
         <header>
             <button class="button" data-text="Awesome">
-                <span class="actual-text">&nbsp;Andrei&nbsp;</span>
-                <span aria-hidden="true" class="hover-text">&nbsp;Andrei &nbsp;</span>
+                <span class="actual-text">&nbsp;Homepage&nbsp;</span>
+                <span aria-hidden="true" class="hover-text">&nbsp;Homepage&nbsp;</span>
             </button>
             <ul class="nav-buttons">
                 <li><a href="./pages/aboutMe/index.html"><button>About Me</button></a></li>
