--- a/pages/aboutMe/index.html
+++ b/pages/aboutMe/index.html
@@ -11,8 +11,8 @@
     <div class="circle"></div>
     <header>
         <button class="button" data-text="Awesome">
-            <span class="actual-text">&nbsp;Andrei&nbsp;</span>
-            <span aria-hidden="true" class="hover-text">&nbsp;Andrei &nbsp;</span>
+            <span class="actual-text">&nbsp;About Me&nbsp;</span>
+            <span aria-hidden="true" class="hover-text">&nbsp;About me &nbsp;</span>
         </button>
         <nav>
             <div class="nav-buttons">
@@ -48,7 +48,7 @@
                 <p>Feel free to explore my projects and connect with me on social media!</p>
         </div>
         <div class="img-box">
-            <img src="./img/image.jpg" class="" alt="">
+            <img src="./img/img.jpg" class="" alt="">
         </div>
 
     </div>
