feat(socials): design structure and style for socials page

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -52,7 +52,7 @@
                 <p class="para">This project involves replicating a one-page website design selected from Pinterest or Behance.</p>
                 <div class="overlay"></div>
                 <div  class="card-btn">
-                    <a href="https://ladiesman416.github.io/WD-my_Website/">Click to open</a>
+                    <a href="./assets/img/wrieframe.png">Click to open</a>
                 </div>
             </div>
         
