feat(credits): add structure and styling for Credits page

--- a/pages/credits/index.html
+++ b/pages/credits/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Credits</title>
 </head>
-
 <section>
-    <div class="circle"></div>
+ 
     <header>
         <button class="button" data-text="Awesome">
             <span class="actual-text">&nbsp;Credits&nbsp;</span>
@@ -33,8 +32,78 @@
             </div>
         </nav>
     </header>
-   
+    <h2>With Special Thanks to these resources</h2>
+    <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>uiverse.io</p>
+        </div>
+        <div class="content">
+          <p class="heading">my go-to Open-Source UI elements for my projects</p>
+           <img src="./assets/img/uiverse.png" alt="">
+        </div>
+      </div>
+      </div>
 
+      <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>Flaticon Logo</p>
+        </div>
+        <div class="content">
+          <p class="heading">Also a open source for a lot of logos.</p>
+          <img src="./assets/img/flaticon.png" alt="">
+        </div>
+      </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>Free Convert</p>
+        </div>
+        <div class="content">
+          <p class="heading">A free and wide range image converter online.</p>
+         <img src="./assets/img/freeconvert.png" alt="">
+        </div>
+      </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>w3schools</p>
+        </div>
+        <div class="content">
+          <p class="heading">one of the worlds largest learning platform for developers</p>
+          <img src="./assets/img/wweschools.png" alt="">
+        </div>
+      </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>Dribble</p>
+        </div>
+        <div class="content">
+          <p class="heading">One of my huge sources of inspiration in creating my projects.</p>
+         <img src="./assets/img/dribble.png" alt="">
+        </div>
+      </div>
+      </div>
+
+      <div class="card-container">
+        <div class="card">
+        <div class="front-content">
+          <p>Hover me</p>
+        </div>
+        <div class="content">
+          <p class="heading">an online free open source web tools for web development.</p>
+          <img src="./assets/img/angry.png" alt="">
+        </div>
+      </div>
+      </div>
 </section>
 <footer>
     <div class="footer-content">
