feat(socials): integrate JavaScript functionality

--- a/pages/aboutMe/index.html
+++ b/pages/aboutMe/index.html
@@ -37,10 +37,10 @@
         <h1>Kyle Rianne <br>Andrei D. Dionio</h1>
             <h3>an ITCS Student at FEU TECH</h3>
                 <p>Hi there!
-                    <br> As an IT student specializing in the cybersecurity field, 
+                    <br> I am an IT student specializing in the cybersecurity field,
                     I am passionate about leveraging my skills to build and maintain secure digital environments.
                     My journey in Information Technology has equipped me with fundamental knowledge in C++, Java, HTML, and CSS.
-                    I also possess basic editing skills in Canva and Adobe Photoshop, 
+                    I also possess basic editing skills in Canva and Adobe Photoshop,
                     along with a solid understanding of operating systems, particularly Windows.
                 <p>Feel free to explore my projects and connect with me on social media!</p>
         </div>
