--- a/pages/socials/index.html
+++ b/pages/socials/index.html
@@ -37,7 +37,7 @@
         <form class="form">
             <p class="heading">Wanna get acquainted? Feel free to write down a message to my email!</p>
             <input class="input" placeholder="your email:" type="text">
-            <input class="input" placeholder="my email: andreidionio416@gmail.com" type="email">
+            <input class="input" placeholder="send it to my email: andreidionio416@gmail.com" type="email">
             <input class="input" placeholder="your message: " type="text">
             <button class="btn">Submit</button>
         </form>
@@ -65,5 +65,6 @@
         <p>&copy; 2024 IT0043L FINAL PROJECT IN WEB DESIGN.</p>
     </div>
 </footer>
+<script src="./assets/js/scripts.js"></script>
 </body>
 </html>
