docs(readme): updated readme file

--- a/pages/aboutMe/index.html
+++ b/pages/aboutMe/index.html
@@ -40,7 +40,7 @@
                     <br> I am an IT student specializing in the cybersecurity field,
                     I am passionate about leveraging my skills to build and maintain secure digital environments.
                     My journey in Information Technology has equipped me with fundamental knowledge in C++, Java, HTML, and CSS.
-                    I also possess basic editing skills in Canva and Adobe Photoshop,
+                    I also possess basic editing skills in Canva and Adobe Photoshop/Illustrator,
                     along with a solid understanding of operating systems, particularly Windows.
                 <p>Feel free to explore my projects and connect with me on social media!</p>
         </div>
