feat (homepage): add an overview of my project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div class="container">
             <div class="text-box">
                 <h2> Kyle Rianne Andrei D. Dionio  <span> an ITCS Student at FEU Tech </span></h2>
-                <p></p>
+                <h4>What is this project about:</h4>
+                <p> This project is a blend of creativity, technology, and passion, aimed at providing an immersive experience for every visitor. It's not just a website it's a digital representation of my self and aspirations.</p>
             </div>
             <div class="img-box">
                 <img src="./assets/img/FormalImage.JPG" class="starbucks" alt="">
